@@ -23,21 +23,27 @@ public class TerminalPortuaria {
 
 
 	private String nombre;
+	private Coordenada coordenada;
 	private List<LineaNaviera> misNavieras = new ArrayList<>();
 	private Set<Orden> ordenes = new HashSet<>();
 	private E_MejorRuta estrategia;
 	private Busqueda busquedaMaritima;
 
+
 	public TerminalPortuaria(String nombre)
 	{
+		this.coordenada = coordenada;
 		this.nombre = nombre;
 	}
-
 
 
 	public List<LineaNaviera> getMisNavieras()
 	{
 		return this.misNavieras;
+	}
+	
+	public Set<Orden> getOrdenes() {
+		return this.ordenes;
 	}
 
 
@@ -53,8 +59,12 @@ public class TerminalPortuaria {
 		return this.busquedaMaritima.filtrar(this.getMisViajes());
 	}
 	
-	 public void setMejorCircuito( E_MejorRuta estrategia ) {
+	 public void setEstrategia( E_MejorRuta estrategia ) {
 	 	this.estrategia = estrategia;
+	 }
+	 
+	 public E_MejorRuta getEstrategia() {
+		 return this.estrategia;
 	 }
 
 
@@ -63,7 +73,6 @@ public class TerminalPortuaria {
 	 }
 
 
-//
 //	public void darAvisoShippers( Viaje viaje )
 //	{
 //		List<Orden> ordenesExportacion = ordenes.stream().filter( o -> o.esOrdenExportacion() ).toList();
@@ -71,11 +80,11 @@ public class TerminalPortuaria {
 //
 //		listaConsignees.stream().forEach( c -> c.recibirMail("Su carga está llegando") );
 //	}
-
+//
 //	public void darAvisoConsignees( Viaje viaje )
 //	{
 //		List<Orden> ordenesImportacion = ordenes.stream().filter( o -> o.esOrdenImportacion() ).toList();
-//		List<Cliente> listaConsignees = ordenesImportacion.stream().filter( o -> o.getViaje() == viaje ).map( v -> v.getCliente() ).toList();
+//		List<Cliente> listaConsignees = ordenesImportacion.stream().filter( o -> o.getViaje() == viaje ).map( v -> v.getCliente() ).collect(Collectors.toList());
 //		listaConsignees.stream().forEach( c -> c.recibirMail("Su carga ha salido de la terminal") );
 //	}
 
@@ -86,7 +95,7 @@ public class TerminalPortuaria {
 	}
 
 
-	public void registrasNuevaOrden(Orden orden)
+	public void registrarNuevaOrden(Orden orden)
 	{
 		this.ordenes.add(orden);
 	}
@@ -107,7 +116,7 @@ public class TerminalPortuaria {
 		return circuitosNaviera.stream().anyMatch(cir->cir.terminalExisteEnElCircuito(this));
 	}
 
-	public void trabajoCargaYDescarga(Buque buque) throws Exception
+	public void working(Buque buque) throws Exception
 	{
 		buque.working();
 	}
@@ -123,7 +132,7 @@ public class TerminalPortuaria {
 		this.validarCamion(camion, orden);
 		this.validarChofer(chofer, orden);
 		this.validarHorarioDeEntrega(orden);
-		orden.registrarEntregaContainer();
+		this.registrarNuevaOrden(orden);
 	}
 
 
@@ -131,7 +140,7 @@ public class TerminalPortuaria {
 	{
 		this.validarCamion(camion, orden);
 		this.validarChofer(chofer, orden);
-		orden.registrarSalidaContainer();
+		this.registrarNuevaOrden(orden);
 	}
 
 
@@ -180,15 +189,10 @@ public class TerminalPortuaria {
 
 	 public Coordenada getCoordenadas() {
 		// TODO Auto-generated method stub
-		return null;
+		return this.coordenada;
 	 }
 
 	 public void proximoAArribar(Viaje viaje) {
-		// TODO Auto-generated method stub
-		
-	 }
-
-	 public void working(Buque buque1) {
 		// TODO Auto-generated method stub
 		
 	 }
